--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ video = ["simula_video/video"]
 [dependencies]
 bevy = { version = "0.9" }
 bevy-inspector-egui = "0.14"
+bevy_egui = "0.17"
 # wgpu-types = "0.13.2"
 
 simula_core = { git = "https://github.com/Simbotic/simula.git", rev = "11003866b498a08e34ace23480720c666d490a82" }
@@ -21,6 +22,18 @@ simula_viz = { git = "https://github.com/Simbotic/simula.git", rev = "11003866b4
 simula_action = { git = "https://github.com/Simbotic/simula.git", rev = "11003866b498a08e34ace23480720c666d490a82" }
 simula_video = { git = "https://github.com/Simbotic/simula.git", rev = "11003866b498a08e34ace23480720c666d490a82" }
 
+sugarfunge-api-types = { git = "https://github.com/SugarFunge/sugarfunge-api.git", branch = "feature/polkadot-v0.9.34" }
+
+tokio = { default-features = false, features = [
+    "io-std",
+    "io-util",
+    "time",
+    "rt-multi-thread",
+], version = "1" }
+reqwest = { version = "0.11", features = ["json"] }
+crossbeam = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 rand = "0.8.5"
 enum-iterator = "1.2"
 enum-display-derive = "0.1.1"
@@ -30,6 +43,9 @@ url = "2.3"
 git = "https://github.com/SugarFunge/subxt.git"
 branch = "feature/polkadot-v0.9.34"
 default-features = false
+
+[profile.dev.package."*"]
+opt-level = 3
 
 [profile.release]
 opt-level = 'z'
